# doormat

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  deps.sh  doormat.kdev4  travis.sh
app/: CMakeLists.txt  a.out  main.cpp
app/cert/: keypass  newcert.pem  newkey.pem
src/: CMakeLists.txt  IPV4Network.cpp  IPV4Network.h  connector.h  constants.cpp  constants.h  daemon.cpp  daemon.h  dummy_node.h  http_client.cpp  http_client.h  http_server.cpp  http_server.h  init.cpp  init.h  io_service_pool.cpp  io_service_pool.h  main.cpp  signal_handlers.h
src/board/: abstract_destination_provider.h  board.cpp  board.h  board_map.cpp  board_map.h
src/cache/: cache.h  cache_element.h  cache_insertion_buffer.h  tag.h  ttl_cleaner.h
src/cache/policies/: fifo.h
src/cache/translator/: translation_unit.h
src/chain_of_responsibility/: callback_initializer.h  chain_of_responsibility.h  error_code.h  index_sequence.h  node_erased.h  node_interface.h
src/client/: client_wrapper.cpp  client_wrapper.h
src/configuration/: abstract_configuration_maker.cpp  abstract_configuration_maker.h  cache_normalization_rule.cpp  cache_normalization_rule.h  configuration_exception.h  configuration_maker.cpp  configuration_maker.h  configuration_parser.h  configuration_wrapper.cpp  configuration_wrapper.h  doormat_proxy_configuration_maker.cpp  doormat_proxy_configuration_maker.h  header_configuration.cpp  header_configuration.h
src/endpoints/: chain_factory.cpp  chain_factory.h  generator.h
src/endpoints/path/: radix_tree.cpp  radix_tree.h
src/endpoints/tree/: path_tree.cpp  path_tree.h  tree.cpp  tree.h
src/errors/: error_codes.h  error_factory.cpp  error_factory.h  error_factory_async.cpp  error_factory_async.h  error_message_details.cpp  error_message_details.h  error_messages.cpp  error_messages.h  internal_error.cpp  internal_error.h
src/fs/: fs_manager_wrapper.cpp  fs_manager_wrapper.h
src/http/: connection.cpp  connection.h  connection_error.cpp  connection_error.h  http_codec.cpp  http_codec.h  http_codec_impl.h  http_commons.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_structured_data.cpp  http_structured_data.h  message_error.h  object_error.h  peer.cpp  peer.h  request.cpp  request.h  response.cpp  response.h
src/http2/: http2alloc.cpp  http2alloc.h  http2error.h  session.cpp  session.h  session_client.cpp  session_client.h  stream.cpp  stream.h  stream_client.cpp  stream_client.h
src/http_parser/: http_parser.c  http_parser.h
src/log/: access_record.cpp  access_record.h  format.cpp  format.h  inspector_serializer.cpp  inspector_serializer.h  log.cpp  log.h
src/network/: buffer.cpp  buffer.h  client_connection_multiplexer.cpp  client_connection_multiplexer.h  cloudia_pool.cpp  cloudia_pool.h  communicator.h  communicator_factory.h  connector.cpp  connector.h  connector_clear.cpp  connector_clear.h  connector_factory.h  connector_ssl.cpp  connector_ssl.h  dns_communicator_factory.cpp  dns_connector_factory.cpp  dns_connector_factory.h  magnet.cpp  magnet.h  receiver.h  socket_factory.h  socket_pool.cpp  socket_pool.h
src/protocol/: handler_factory.cpp  handler_factory.h  handler_http1.cpp  handler_http1.h  handler_http2.cpp  handler_http2.h  handler_interface.cpp  handler_interface.h  http_handler.cpp  http_handler.h  stream_handler.cpp  stream_handler.h
src/requests_manager/: cache_cleaner.cpp  cache_cleaner.h  client_wrapper.cpp  client_wrapper.h  configurable_header_filter.cpp  configurable_header_filter.h  date_setter.h  error_file_provider.cpp  error_file_provider.h  error_producer.cpp  error_producer.h  franco_host.cpp  franco_host.h  gzip_filter.cpp  gzip_filter.h  header_filter.cpp  header_filter.h  id_header_adder.cpp  id_header_adder.h  interreg_filter.cpp  interreg_filter.h  method_filter.cpp  method_filter.h  request_stats.cpp  request_stats.h  size_filter.cpp  size_filter.h  sys_filter.cpp  sys_filter.h
src/service_locator/: service_common.h  service_initializer.h  service_locator.cpp  service_locator.h
src/stats/: stats_manager.cpp  stats_manager.h
src/utils/: base64.cpp  base64.h  doormat_types.h  dstring.cpp  dstring.h  dstring_factory.cpp  dstring_factory.h  json.hpp  likely.h  log_wrapper.cpp  log_wrapper.h  loop.cpp  loop.h  memory.h  memory_supplier.h  null_deleter.h  resource_reader.cpp  resource_reader.h  reusable_buffer.h  sni_solver.cpp  sni_solver.h  utils.cpp  utils.h
test/: CMakeLists.txt  base64_test.cpp  board_map_test.cpp  cloudiapooltest.cpp  codec_test.cpp  configuration_parser_test.cpp  connector_test.cpp  cor_test.cpp  dstring_factory_test.cpp  dstring_test.cpp  error_test.cpp  handler_test.cpp  header_conf_test.cpp  http_client_test.cpp  inspector_serializer_test.cpp  ipv4matcher_test.cpp  log_test.cpp  main.cpp  reusable_buffer_test.cpp  size_client_integration_test.cpp  sni_solver_test.cpp  stats_test.cpp  testcommon.cpp  testcommon.h  utils_test.cpp
test/cache/: cache_test.cpp  translation_unit_test.cpp  ttl_cleaner_test.cpp
test/endpoints/: chain_factory.cpp  tree_test.cpp
test/mock_server/: mock_server.cpp  mock_server.h
test/mocks/: mock_connector.cpp  mock_connector.h  mock_connector.hpp
test/network/: communicator_test.cpp  dns_factory_test.cpp  multiplexer_test.cpp  socket_pool_test.cpp
test/nodes/: cache_cleaner_test.cpp  cache_manager_test.cpp  cache_request_normalizer_test.cpp  client_wrapper_test.cpp  common.cpp  common.h  configurable_header_filter_test.cpp  configurable_header_filter_test.cpp.orig  date_setter_test.cpp  error_file_provider_test.cpp  error_producer_test.cpp  franco_host_test.cpp  gzip_filter_test.cpp  header_filter_test.cpp  id_header_adder_test.cpp  ip_filter_test.cpp  method_filter_test.cpp  request_stats_test.cpp  size_filter_test.cpp  sys_filter_test.cpp
test/server/: boat.json  index.js  package.json  performance_test_server.js
test_performance/: CMakeLists.txt  cache.cpp  chain_perf.cpp  connector_perf.cpp
test_performance/client/: perf_client.cpp  perf_client.h
test_performance/utils/: measurements.h
(+127 files in other folders)
